# hexagon_6x_android_app

./: README.md  android_app_walkthrough.py  app-debug.apk  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  app_run.c  jni.cpp  main.c  test.cpp
app/src/main/cpp/inc/: android_app.idl  android_app_async.idl  android_app_defs.idl  app_run.h  logs.h
app/src/main/java/com/example/android_app/: ConfigsActivity.java  MainActivity.java  SessionConfigs.java  SessionStats.java  StatsActivity.java
app/src/main/res/layout/: activity_main.xml  settings.xml  stats.xml
app/src/main/res/values/: strings.xml
dsp/: CMakeLists.txt  android_app_async_imp.c  android_app_imp.c  android_app_imp_defs.h  task.S  verify.h
gradle/wrapper/: gradle-wrapper.properties
scripts/: create_as_project.py
